# rust_api_scaffold

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  db.rs  main.rs
src/api/: health.rs  mod.rs  users.rs
